7/26/2024 update